# Parallels

task1/: CMakeLists.txt  README.MD  task1.cpp
task2/task2_1/: README.MD  dgemv.cpp
task2_1/: CMakeLists.txt  script.sh  task2_1.ods
